# flat_map

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: format.yml  test.yml
example/: CMakeLists.txt  entity_db.cpp
include/eggs/: flat_map.hpp
test/: CMakeLists.txt  access.cpp  assign.cpp  capacity.cpp  catch.cpp  columns.cpp  comparison.cpp  cons.cpp  const_reference.cpp  emplace.cpp  erase.cpp  erase_if.cpp  extract.cpp  insert.cpp  insert_or_assign.cpp  iterators.cpp  lookup.cpp  observers.cpp  reference.cpp  swap.cpp  try_emplace.cpp  value_type.cpp
test/catch2/: CMakeLists.txt
test/cmake-fetch_content/: CMakeLists.txt
test/cmake-find_package/: CMakeLists.txt
